force-app/main/default/objects/Opportunity/fields/Appointment_Date_and_Time_agent3__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_and_Time_agent3__c</fullName>
    <label>Appointment Date and Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>