force-app/main/default/objects/Opportunity/fields/Archive_Approval_Status2__c.field-meta.xml
<CustomField>
    <fullName>Archive_Approval_Status2__c</fullName>
    <label>Archive Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>