force-app/main/default/objects/Opportunity/fields/Archive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Archive_Reason__c</fullName>
    <label>Archive Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>