force-app/main/default/objects/Opportunity/fields/Archived_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date_Time__c</fullName>
    <label>Archived Date Time</label>
    <type>DateTime</type>
</CustomField>