force-app/main/default/objects/Opportunity/fields/Archived_Rejected_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Archived_Rejected_DateTime__c</fullName>
    <label>Archived Rejected DateTime</label>
    <type>DateTime</type>
</CustomField>