force-app/main/default/objects/Opportunity/fields/Average_Bottom_Line__c.field-meta.xml
<CustomField>
    <fullName>Average_Bottom_Line__c</fullName>
    <label>Average - Bottom Line</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>