force-app/main/default/objects/Opportunity/fields/Average_Initial_Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Initial_Asking_Price__c</fullName>
    <label>Average - Initial Asking Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>