force-app/main/default/objects/Opportunity/fields/Average_Target_Sale__c.field-meta.xml
<CustomField>
    <fullName>Average_Target_Sale__c</fullName>
    <label>Average - Target Sale</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>