force-app/main/default/objects/Opportunity/fields/Blacklisted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_Date_Time__c</fullName>
    <label>Blacklisted Date Time</label>
    <type>DateTime</type>
</CustomField>