force-app/main/default/objects/Opportunity/fields/Blacklisted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_Reason__c</fullName>
    <label>Blacklisted Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>