force-app/main/default/objects/Opportunity/fields/Box_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_Id__c</fullName>
    <label>Box Folder Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>