force-app/main/default/objects/Opportunity/fields/Client_Estimated_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Client_Estimated_Valuation__c</fullName>
    <label>Client Estimated Valuation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>