force-app/main/default/objects/Opportunity/fields/Client_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Client_Expectations__c</fullName>
    <label>Client Expectations</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>