force-app/main/default/objects/Opportunity/fields/Council_Tax__c.field-meta.xml
<CustomField>
    <fullName>Council_Tax__c</fullName>
    <label>Council Tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>