force-app/main/default/objects/Opportunity/fields/Council_Tax_Annual_Charges__c.field-meta.xml
<CustomField>
    <fullName>Council_Tax_Annual_Charges__c</fullName>
    <formula>Property__r.Council_Tax_Annual_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Council Tax Annual Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>