force-app/main/default/objects/Opportunity/fields/Council_Tax_Band__c.field-meta.xml
<CustomField>
    <fullName>Council_Tax_Band__c</fullName>
    <formula>Property__r.Council_Tax_Band__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Council Tax Band</label>
    <type>Text</type>
</CustomField>