force-app/main/default/objects/Opportunity/fields/Current_Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Asking_Price__c</fullName>
    <label>Current Asking Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>