force-app/main/default/objects/Opportunity/fields/Current_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_Rating__c</fullName>
    <formula>Property__r.Current_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rating</label>
    <type>Text</type>
</CustomField>