force-app/main/default/objects/Opportunity/fields/Date_of_Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Application_Received__c</fullName>
    <label>Date of Application Received</label>
    <type>Date</type>
</CustomField>