force-app/main/default/objects/Opportunity/fields/Day_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Day_Greeting__c</fullName>
    <formula>IF(
    HOUR(TIMENOW()) &lt; 12,
    &quot;Good Morning&quot;,
    IF(
        HOUR(TIMENOW()) &lt; 18,
        &quot;Good Afternoon&quot;,
        &quot;Good Evening&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Greeting</label>
    <type>Text</type>
</CustomField>