force-app/main/default/objects/Opportunity/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <label>Development</label>
    <length>255</length>
    <type>Text</type>
</CustomField>