force-app/main/default/objects/Opportunity/fields/Dummy_Data__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dummy Data</label>
    <type>Checkbox</type>
</CustomField>