force-app/main/default/objects/Opportunity/fields/Emailed_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Emailed_to_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emailed to Vendor</label>
    <type>Checkbox</type>
</CustomField>