force-app/main/default/objects/Opportunity/fields/EPC_Rating__c.field-meta.xml
<CustomField>
    <fullName>EPC_Rating__c</fullName>
    <label>EPC Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>