force-app/main/default/objects/Opportunity/fields/ETA_Comp_Date_Start_Range__c.field-meta.xml
<CustomField>
    <fullName>ETA_Comp_Date_Start_Range__c</fullName>
    <label>ETA Comp Date - Start Rn</label>
    <type>Date</type>
</CustomField>