force-app/main/default/objects/Opportunity/fields/ETA_Comp_End__c.field-meta.xml
<CustomField>
    <fullName>ETA_Comp_End__c</fullName>
    <label>ETA Comp - End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>