force-app/main/default/objects/Opportunity/fields/ETA_Comp_Start__c.field-meta.xml
<CustomField>
    <fullName>ETA_Comp_Start__c</fullName>
    <label>ETA Comp - Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>