force-app/main/default/objects/Opportunity/fields/FC_Address_Validated__c.field-meta.xml
<CustomField>
    <fullName>FC_Address_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Validated</label>
    <type>Checkbox</type>
</CustomField>