force-app/main/default/objects/Opportunity/fields/FC_Agent_2_Report__c.field-meta.xml
<CustomField>
    <fullName>FC_Agent_2_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent 2 Report</label>
    <type>Checkbox</type>
</CustomField>