force-app/main/default/objects/Opportunity/fields/FC_Agent_3_Report__c.field-meta.xml
<CustomField>
    <fullName>FC_Agent_3_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent 3 Report</label>
    <type>Checkbox</type>
</CustomField>