force-app/main/default/objects/Opportunity/fields/FC_NHS_Pre_Will_Report__c.field-meta.xml
<CustomField>
    <fullName>FC_NHS_Pre_Will_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NHS Pre-Will Report</label>
    <type>Checkbox</type>
</CustomField>