force-app/main/default/objects/Opportunity/fields/Forced_Sale__c.field-meta.xml
<CustomField>
    <fullName>Forced_Sale__c</fullName>
    <label>Forced Sale</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>