force-app/main/default/objects/Opportunity/fields/Fri_AM__c.field-meta.xml
<CustomField>
    <fullName>Fri_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fri - AM</label>
    <type>Checkbox</type>
</CustomField>