force-app/main/default/objects/Opportunity/fields/Fri_PM__c.field-meta.xml
<CustomField>
    <fullName>Fri_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fri - PM</label>
    <type>Checkbox</type>
</CustomField>