force-app/main/default/objects/Opportunity/fields/Ground_Rent__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent__c</fullName>
    <label>Ground Rent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>