force-app/main/default/objects/Opportunity/fields/Has_your_house_been_valued_by_an_agent__c.field-meta.xml
<CustomField>
    <fullName>Has_your_house_been_valued_by_an_agent__c</fullName>
    <label>Has your house been valued by an agent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>