force-app/main/default/objects/Opportunity/fields/House_Builder__c.field-meta.xml
<CustomField>
    <fullName>House_Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House Builder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>