force-app/main/default/objects/Opportunity/fields/House_Builder_Application_Pdf_URL__c.field-meta.xml
<CustomField>
    <fullName>House_Builder_Application_Pdf_URL__c</fullName>
    <formula>House_Builder__r.Application_Pdf_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Builder Application Pdf URL</label>
    <type>Text</type>
</CustomField>