force-app/main/default/objects/Opportunity/fields/House_Builder_Email__c.field-meta.xml
<CustomField>
    <fullName>House_Builder_Email__c</fullName>
    <formula>Account.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Builder Email</label>
    <type>Text</type>
</CustomField>