force-app/main/default/objects/Opportunity/fields/House_Builder_Logo__c.field-meta.xml
<CustomField>
    <fullName>House_Builder_Logo__c</fullName>
    <label>House Builder Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>