force-app/main/default/objects/Opportunity/fields/Housebuildeer_Name__c.field-meta.xml
<CustomField>
    <fullName>Housebuildeer_Name__c</fullName>
    <formula>House_Builder__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housebuildeer Name</label>
    <type>Text</type>
</CustomField>