force-app/main/default/objects/Opportunity/fields/ID_Check_Form_In__c.field-meta.xml
<CustomField>
    <fullName>ID_Check_Form_In__c</fullName>
    <label>ID Check Form In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>