force-app/main/default/objects/Opportunity/fields/Is_your_house_on_the_market_NEW__c.field-meta.xml
<CustomField>
    <fullName>Is_your_house_on_the_market_NEW__c</fullName>
    <label>Is your house on the market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>