force-app/main/default/objects/Opportunity/fields/Last_Agent_2_Emailed_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Agent_2_Emailed_On__c</fullName>
    <label>Last Agent 2 Emailed On</label>
    <type>DateTime</type>
</CustomField>