force-app/main/default/objects/Opportunity/fields/Last_Emailed_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Last_Emailed_to_Vendor__c</fullName>
    <label>Last Emailed to Vendor</label>
    <type>DateTime</type>
</CustomField>