force-app/main/default/objects/Opportunity/fields/Last_Transaction_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Price__c</fullName>
    <formula>Property__r.Last_Transaction_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Transaction Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>