force-app/main/default/objects/Opportunity/fields/Length_of_Lease_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Lease_Remaining__c</fullName>
    <label>Length of Lease - Remaining</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>