force-app/main/default/objects/Opportunity/fields/Mid_Terrace__c.field-meta.xml
<CustomField>
    <fullName>Mid_Terrace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mid Terrace</label>
    <type>Checkbox</type>
</CustomField>