force-app/main/default/objects/Opportunity/fields/Mon_AM__c.field-meta.xml
<CustomField>
    <fullName>Mon_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mon - AM</label>
    <type>Checkbox</type>
</CustomField>