force-app/main/default/objects/Opportunity/fields/Mon_PM__c.field-meta.xml
<CustomField>
    <fullName>Mon_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mon - PM</label>
    <type>Checkbox</type>
</CustomField>