force-app/main/default/objects/Opportunity/fields/Next_Available_Date_OLD__c.field-meta.xml
<CustomField>
    <fullName>Next_Available_Date_OLD__c</fullName>
    <label>Next Available Date Old</label>
    <type>Date</type>
</CustomField>