force-app/main/default/objects/Opportunity/fields/NHS_Process__c.field-meta.xml
<CustomField>
    <fullName>NHS_Process__c</fullName>
    <label>NHS Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
                <default>true</default>
                <label>Application</label>
            </value>
            <value>
                <fullName>Vendor Availability</fullName>
            </value>
            <value>
                <fullName>Agents Booked</fullName>
            </value>
            <value>
                <fullName>Figures to chased</fullName>
                <label>Figures to chase</label>
            </value>
            <value>
                <fullName>Figures returned</fullName>
            </value>
            <value>
                <fullName>Valuations Ready</fullName>
            </value>
            <value>
                <fullName>Final Checks</fullName>
            </value>
            <value>
                <fullName>Vendor Discussions</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>