force-app/main/default/objects/Opportunity/fields/NHS_Rec_4_6_Week__c.field-meta.xml
<CustomField>
    <fullName>NHS_Rec_4_6_Week__c</fullName>
    <description>NHS-recommended price for a 4-6 week sale window when using the timeline valuation model.</description>
    <label>NHS Recommended 4-6 Week</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>