force-app/main/default/objects/Opportunity/fields/NHS_Rec_Open_Market__c.field-meta.xml
<CustomField>
    <fullName>NHS_Rec_Open_Market__c</fullName>
    <description>NHS-recommended open-market price when using the timeline valuation model. Prefilled with the median of the 3 agents; editable.</description>
    <label>NHS Recommended Open Market</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>