force-app/main/default/objects/Opportunity/fields/NHS_Sales_Advisor__c.field-meta.xml
<CustomField>
    <fullName>NHS_Sales_Advisor__c</fullName>
    <label>NHS Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jordan Edmondson</fullName>
            </value>
            <value>
                <fullName>Natasha Turner</fullName>
            </value>
            <value>
                <fullName>Ruth O’Connell</fullName>
            </value>
            <value>
                <fullName>Amy Jackson</fullName>
            </value>
            <value>
                <fullName>Sarah Binns</fullName>
            </value>
            <value>
                <fullName>Charlotte Horwell</fullName>
            </value>
            <value>
                <fullName>Gina Brookes</fullName>
            </value>
            <value>
                <fullName>Akash G</fullName>
                <isActive>false</isActive>
                <label>Akash G</label>
            </value>
            <value>
                <fullName>Deepak R</fullName>
                <isActive>false</isActive>
                <label>Deepak R</label>
            </value>
            <value>
                <fullName>Gokul S</fullName>
                <isActive>false</isActive>
                <label>Gokul S</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>