force-app/main/default/objects/Opportunity/fields/No_Garden__c.field-meta.xml
<CustomField>
    <fullName>No_Garden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Garden</label>
    <type>Checkbox</type>
</CustomField>