force-app/main/default/objects/Opportunity/fields/Number_Of_Viewings__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Viewings__c</fullName>
    <label>Number Of Viewings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>