force-app/main/default/objects/Opportunity/fields/Outstanding_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Mortgage__c</fullName>
    <label>Outstanding Mortgage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>