force-app/main/default/objects/Opportunity/fields/Photographic_ID_Seen_at_the_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Photographic_ID_Seen_at_the_Appointment__c</fullName>
    <label>Photographic ID Seen at the Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>