force-app/main/default/objects/Opportunity/fields/Pinned__c.field-meta.xml
<CustomField>
    <fullName>Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>