force-app/main/default/objects/Opportunity/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <label>Plot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>