force-app/main/default/objects/Opportunity/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Property__r.Address__Street__s + &apos; &apos; + Property__r.Address__City__s + &apos; &apos; + Property__r.Address__PostalCode__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>