force-app/main/default/objects/Opportunity/fields/Property_Description__c.field-meta.xml
<CustomField>
    <fullName>Property_Description__c</fullName>
    <formula>TEXT(Type_of_House__c) &amp; IF(Property__r.Number_Of_Bedrooms__c != null, " " &amp; TEXT(Property__r.Number_Of_Bedrooms__c) &amp; " Bed", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Description</label>
    <type>Text</type>
</CustomField>