force-app/main/default/objects/Opportunity/fields/Qualified_By_House_Builders_FA__c.field-meta.xml
<CustomField>
    <fullName>Qualified_By_House_Builders_FA__c</fullName>
    <label>Qualified By (House Builders FA);</label>
    <length>255</length>
    <type>Text</type>
</CustomField>