force-app/main/default/objects/Opportunity/fields/Sales_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Sales_Advisor__c</fullName>
    <label>Sales Advisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>