force-app/main/default/objects/Opportunity/fields/Sales_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cancelled__c</fullName>
    <label>Sales Cancelled</label>
    <type>DateTime</type>
</CustomField>