force-app/main/default/objects/Opportunity/fields/Sat_AM__c.field-meta.xml
<CustomField>
    <fullName>Sat_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sat - AM</label>
    <type>Checkbox</type>
</CustomField>