force-app/main/default/objects/Opportunity/fields/Sat_PM__c.field-meta.xml
<CustomField>
    <fullName>Sat_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sat - PM</label>
    <type>Checkbox</type>
</CustomField>