force-app/main/default/objects/Opportunity/fields/Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge__c</fullName>
    <label>Service Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>