force-app/main/default/objects/Opportunity/fields/Shared_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Shared_Ownership__c</fullName>
    <label>Shared Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>