force-app/main/default/objects/Opportunity/fields/Shared_Ownership_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shared_Ownership_Notes__c</fullName>
    <label>Shared Ownership Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>