force-app/main/default/objects/Opportunity/fields/SSID_Mr__c.field-meta.xml
<CustomField>
    <fullName>SSID_Mr__c</fullName>
    <label>SSID Mr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>