force-app/main/default/objects/Opportunity/fields/SSID_Mrs__c.field-meta.xml
<CustomField>
    <fullName>SSID_Mrs__c</fullName>
    <label>SSID Mrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>