force-app/main/default/objects/Opportunity/fields/Sun_AM__c.field-meta.xml
<CustomField>
    <fullName>Sun_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sun - AM</label>
    <type>Checkbox</type>
</CustomField>