force-app/main/default/objects/Opportunity/fields/Sun_PM__c.field-meta.xml
<CustomField>
    <fullName>Sun_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sun - PM</label>
    <type>Checkbox</type>
</CustomField>