force-app/main/default/objects/Opportunity/fields/Terms_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms and Condition</label>
    <type>Checkbox</type>
</CustomField>