force-app/main/default/objects/Opportunity/fields/Thu_AM__c.field-meta.xml
<CustomField>
    <fullName>Thu_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thu - AM</label>
    <type>Checkbox</type>
</CustomField>