force-app/main/default/objects/Opportunity/fields/Thu_PM__c.field-meta.xml
<CustomField>
    <fullName>Thu_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thu - PM</label>
    <type>Checkbox</type>
</CustomField>