force-app/main/default/objects/Opportunity/fields/Time_on_the_market__c.field-meta.xml
<CustomField>
    <fullName>Time_on_the_market__c</fullName>
    <label>Time on the market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>