force-app/main/default/objects/Opportunity/fields/Tue_AM__c.field-meta.xml
<CustomField>
    <fullName>Tue_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tue - AM</label>
    <type>Checkbox</type>
</CustomField>