force-app/main/default/objects/Opportunity/fields/Tue_PM__c.field-meta.xml
<CustomField>
    <fullName>Tue_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tue - PM</label>
    <type>Checkbox</type>
</CustomField>