force-app/main/default/objects/Opportunity/fields/Type_of_House__c.field-meta.xml
<CustomField>
    <fullName>Type_of_House__c</fullName>
    <label>Type of House</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bunglow</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Cottage</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>